# simple-mcp-oauth

./: .gitignore  LICENSE  README.md
docs/: VERIFICATION.md
samples/keycloak/: README.md  realm-export.json
samples/python/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
samples/python/src/: config.py  server.py  tools.py
samples/python/src/auth/: downstream.py  providers.py
samples/typescript/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
samples/typescript/src/: config.ts  server.ts  tools.ts
samples/typescript/src/auth/: downstream.ts  metadata.ts  providers.ts
