[project]
name = "simple-mcp-oauth"
version = "0.0.1"
description = "Simple MCP Server with OAuth Token Exchange"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "starlette>=1.2.1",
    "uvicorn>=0.32.0",
]

[project.scripts]
simple-mcp-oauth = "src.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.auth"]